# App-Gamepad

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cppcmake.yml
src/: lsl_manager.cpp  lsl_manager.hpp  main.cpp
src/qml/: DPad.qml  JoystickViewer.qml  LeftThumbstick.qml  RightThumbstick.qml  main.qml
